--- a/AgenticAI/PhiData-project-1/requirements.txt
+++ b/AgenticAI/PhiData-project-1/requirements.txt
@@ -1,4 +1,5 @@
 phidata
+python-docx
 python-dotenv
 yfinance
 packaging
@@ -8,3 +9,5 @@ fastapi
 uvicorn
 groq
 openai
+fastapi[standard]
+sqlalchemy
